Fix broken css

--- a/src/styl/fresh-responsive.styl
+++ b/src/styl/fresh-responsive.styl
@@ -3,8 +3,7 @@ body.ipad
 body.android
 
   // 320 x 426 - Samsung Galaxy Y
-  @media screen and (max-height: 320px) and (max-width: 427px),
-          screen and (max-height: 427px) and (max-width: 320px)
+  @media screen and (max-height: 320px) and (max-width: 427px), screen and (max-height: 427px) and (max-width: 320px)
     .game-icon
       width: 60px
       height: 60px
@@ -45,8 +44,7 @@ body.android
           line-height: 24px
 
   // 320 x 568 - iPhone 5
-  @media screen and (min-height: 568px) and (min-width: 320px),
-          screen and (min-height: 320px) and (min-width: 568px)
+  @media screen and (min-height: 568px) and (min-width: 320px), screen and (min-height: 320px) and (min-width: 568px)
     .game-info
       margin-top: 22px
 
@@ -68,9 +66,7 @@ body.android
         font-size: 14pt
 
   // 360 x 640 - Samsung Galaxy Note II, Samsung Galaxy S4
-  @media screen and (min-height: 360px) and (min-width: 640px),
-          screen and (min-height: 640px) and (min-width: 360px)
-
+  @media screen and (min-height: 360px) and (min-width: 640px), screen and (min-height: 640px) and (min-width: 360px)
     .btn-watch-again-region
       width: 75px
       height: 75px
@@ -112,8 +108,7 @@ body.android
         padding: 10px 10px 10px 10px
 
   // 384 x 360 - LG Optimus G
-  @media screen and (min-height: 384px) and (min-width: 640px),
-          screen and (min-height: 640px) and (min-width: 384px)
+  @media screen and (min-height: 384px) and (min-width: 640px), screen and (min-height: 640px) and (min-width: 384px)
     &.landscape
       .game-info
         margin-top: 45px
@@ -123,8 +118,7 @@ body.android
         font-size: 16pt;
 
   // 424 x 753 - LG Optimus 4X HD
-  @media screen and (min-height: 424px) and (min-width: 753px),
-          screen and (min-height: 753px) and (min-width: 424px)
+  @media screen and (min-height: 424px) and (min-width: 753px), screen and (min-height: 753px) and (min-width: 424px)
     .game-info
       margin-top: 50px
 
@@ -165,8 +159,7 @@ body.android
         line-height: 19pt
 
   // 540 x 960 - Motorola Droid 3
-  @media screen and (min-height: 540px) and (min-width: 960px),
-          screen and (min-height: 960px) and (min-width: 540px)
+  @media screen and (min-height: 540px) and (min-width: 960px), screen and (min-height: 960px) and (min-width: 540px)
     .btn-watch-again-region
     .btn-close-region
       width: 95px
@@ -250,8 +243,7 @@ body.android
         margin-top: -11px
 
   // 960 x 600 - Google Nexus 7
-  @media screen and (min-height: 600px) and (min-width: 906px),
-          screen and (min-height: 906px) and (min-width: 600px)
+  @media screen and (min-height: 600px) and (min-width: 906px), screen and (min-height: 906px) and (min-width: 600px)
     .end-screen-info
       margin: 30px
 
@@ -266,8 +258,7 @@ body.android
         margin-top: 70px
 
   // 1024 x 600 - Samsung Galaxy Tab 7"
-  @media screen and (min-height: 600px) and (min-width: 1024px),
-          screen and (min-height: 1024px) and (min-width: 600px)
+  @media screen and (min-height: 600px) and (min-width: 1024px), screen and (min-height: 1024px) and (min-width: 600px)
     .game-info
       margin-top: 50px
 
@@ -295,8 +286,7 @@ body.android
         margin-top: 30px
 
   // 1024 x 768 - iPad
-  @media screen and (min-height: 768px) and (min-width: 1024px),
-          screen and (min-height: 1024px) and (min-width: 768px)
+  @media screen and (min-height: 768px) and (min-width: 1024px), screen and (min-height: 1024px) and (min-width: 768px)
     .game-info
       margin-top: 50px
 
@@ -327,8 +317,7 @@ body.android
         letter-spacing: 5px
 
   // 800 x 1280 - Samsung Galaxy Tab 10
-  @media screen and (min-height: 800px) and (min-width: 1280px),
-          screen and (min-height: 1280px) and (min-width: 800px)
+  @media screen and (min-height: 800px) and (min-width: 1280px), screen and (min-height: 1280px) and (min-width: 800px)
     .btn-close-region
     .btn-watch-again-region
       width: 130px
